<resources>
    <string name="app_name">MVVM Example</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_no_account">Still have no account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="progress_bar_logging_in_message">Login in process</string>
    <string name="title_activity_feed">FeedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="author">Author: %s</string>
    <string name="length">Video length: %s seconds</string>
    <string name="created_before">Created: %s</string>
    <string name="author_prefix">Author: %s</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="progress_bar_loading_feed">Loading feed</string>
    <string name="exception_player_not_instantiated">Instantiate player first</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="unable_to_login">Unable to login</string>
    <string name="empty_email_warning">Email field can not be empty</string>
    <string name="password_empty_warning">Password should not be empty</string>
    <string name="email_invalid_form">Email has invalid form</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="empty_username_warning">Username can not be empty field</string>
    <string name="unable_to_register">Unable to register, please try again later</string>
    <string name="logout">Logout</string>
    <string name="needs_implementation">Coming soon</string>
    <string name="profile_name">Name</string>
    <string name="profile_username">Username</string>
    <string name="progress_bar_loading_profile">Loading profile</string>
    <string name="logout_button_tap">Tap button one more time to log out</string>
</resources>
